--- a/upload.html
+++ b/upload.html
@@ -243,7 +243,7 @@
         setTimeout(() => {
           resultDiv.innerHTML = `
             <p>Image processed successfully!</p>
-            <p>Detected Ores: Iron, Copper, Gold</p>
+            <p>Detected Ores: Iron</p>
           `;
         }, 2000); // Simulate a 2-second delay
       } else {
