--- a/upload.html
+++ b/upload.html
@@ -143,7 +143,7 @@
 
     <!-- Button Container -->
     <div class="button-container">
-      <button class="redirect-button" onclick="redirectToStreamlit()">Carbon Emission Tool</button>
+      <button class="redirect-button" onclick="redirectToStreamlit()">Mining Emission Tool</button>
       <button class="redirect-button" onclick="redirectToCO2Tool()">CO2 & Machine Tool</button>
     </div>
   </section>
