--- a/upload.html
+++ b/upload.html
@@ -143,8 +143,8 @@
 
     <!-- Button Container -->
     <div class="button-container">
-      <button class="redirect-button" onclick="redirectToStreamlit()">Mining Emission Tool</button>
-      <button class="redirect-button" onclick="redirectToCO2Tool()">CO2 & Machine Tool</button>
+      <button class="redirect-button" onclick="redirectToStreamlit()">Mining Emission Tool</button><br>
+      <button class="redirect-button" onclick="redirectToCO2Tool()">CO2 & Machine Tool</button><br>
     </div>
   </section>
 
