--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <li><a href="login.html">Login</a></li>
         <li><a href="upload.html">Upload & Process</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="https://landbot.online/v3/H-2808918-I2E7WPIKNU7M1H4U/index.html">Mining Emission bot</a></li>
+        <li><a href="https://landbot.online/v3/H-2808904-GE0HFZJJN5KERONF/index.html">Co2 Emission bot</a></li>
       </ul>
     </nav>
   </header>
