--- a/upload.html
+++ b/upload.html
@@ -129,8 +129,8 @@
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="login.html">Login</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="">Login</a></li>
         <li><a href="upload.html">Upload & Process</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="https://landbot.online/v3/H-2808918-I2E7WPIKNU7M1H4U/index.html">Mining Emission bot</a></li>
